arcade/ingress/highscore-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: highscore
  namespace: arcade
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - backend:
          service:
            name: highscore
            port:
              number: 80
        path: /highscore
        pathType: Prefix
